# Contract_maker

./: README.md  contract.md  pyproject.toml  requirements.txt
src/contracter/: crew.py  main.py
src/contracter/config/: agents.yaml  tasks.yaml
src/contracter/tools/: credentials.json  doc__credentials.json  google_docs_tool.py  rag_tool.py  read_email_tool.py  token_docs.json  token_email.json
