[tool.poetry]
name = "contracter"
version = "0.1.0"
description = "contracter using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
contracter = "contracter.main:run"
train = "contracter.main:train"
replay = "contracter.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
